fix height scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ body {
     
     margin-left: 50px;
     float: left;
-    height: 500px;
+    height: 520px;
    
 
     overflow-y: scroll;
